# Turing

./: pyproject.toml  turing.ipynb
